--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "gtag": "^1.0.1",
     "lucide-react": "^0.523.0",
     "react": "^19.1.0",
     "react-confetti": "^6.4.0",
